--- a/views/admin/petitions/view.ejs
+++ b/views/admin/petitions/view.ejs
@@ -20,13 +20,13 @@
   <p class="mt-4"><strong>Message:</strong></p>
   <pre class="whitespace-pre-wrap bg-gray-900 p-3 rounded text-gray-100 border border-gray-700"><%= petition.Msg %></pre>
 
-    <form action="/admin/petitions/<%= petition.serverKey %>/<%= petition.ContainerId %>/toggle/Fetched" method="POST" class="inline-block mr-2">
+    <form action="/admin/petitions/<%= petition.serverKey %>/<%= petition.ContainerId %>/fetch" method="POST" class="inline-block mr-2">
     <button type="submit" class="btn <%= petition.Fetched ? 'btn-yellow' : 'btn-outline-yellow' %>">
         <%= petition.Fetched ? 'Mark Not In Progress' : 'Mark In Progress' %>
     </button>
     </form>
 
-    <form action="/admin/petitions/<%= petition.serverKey %>/<%= petition.ContainerId %>/toggle/Done" method="POST" class="inline-block">
+    <form action="/admin/petitions/<%= petition.serverKey %>/<%= petition.ContainerId %>/done" method="POST" class="inline-block">
     <button type="submit" class="btn <%= petition.Done ? 'btn-green' : 'btn-outline-green' %>">
         <%= petition.Done ? 'Mark Undone' : 'Mark Done' %>
     </button>
