--- a/views/admin/petitions/view.ejs
+++ b/views/admin/petitions/view.ejs
@@ -9,7 +9,7 @@
   [<%= petition.PosX %>, <%= petition.PosY %>, <%= petition.PosZ %>]
 </p>
 <% if (petition.MapContainerId) { %>
-  <p class="text-sm text-gray-400">Suggested command: <code>/mapmove <%= petition.MapContainerId %></code></p>
+  <p class="text-sm text-gray-400">Mapmove: <code>/mapmove <%= petition.MapContainerId %></code></p>
 <% } %>
 
   <p><strong>Category:</strong> <%= petition.CategoryName %></p>
