rename fields for Manifest

--- a/views/admin/manifest/config-manifest.ejs
+++ b/views/admin/manifest/config-manifest.ejs
@@ -17,11 +17,11 @@
       <input class="w-full" type="text" name="label" value="<%= config.label || '' %>">
     </label>
 
-    <label class="block">Forum Name:
+    <label class="block">Forum \ Discord Name:
       <input class="w-full" type="text" name="forumName" value="<%= config.forumName || '' %>">
     </label>
 
-    <label class="block">Forum URL:
+    <label class="block">Forum \ Discord URL:
       <input class="w-full" type="text" name="forumUrl" value="<%= config.forumUrl || '' %>">
     </label>
 
@@ -29,7 +29,7 @@
       <input class="w-full" type="text" name="webpage" value="<%= config.webpage || '' %>">
     </label>
 
-    <label class="block">Poster Image URL:
+    <label class="block">Launcher Background URL:
       <input class="w-full" type="text" name="posterImage" value="<%= config.posterImage || '' %>">
     </label>
 
