Fix typo breaking petition viewer

--- a/views/account/petitions/list.ejs
+++ b/views/account/petitions/list.ejs
@@ -29,7 +29,7 @@
             <% } %>
           </td>
           <td class="px-4 py-2 border-b border-gray-700">
-            <a href="/account/petitions/<%= p.serverKey %>/<%= p.ContainerId %>" class="text-blue-400 hover:underline">View</a>
+            <a href="/account/petitions/<%= p.server %>/<%= p.ContainerId %>" class="text-blue-400 hover:underline">View</a>
           </td>
         </tr>
       <% }) %>
