--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -17,6 +17,10 @@
          class="block px-3 py-2 rounded hover:bg-gray-700 <%= currentPath === '/account/characters' ? 'bg-gray-700' : '' %>">
          Characters
       </a>
+      <a href="/stats"
+         class="block px-3 py-2 rounded hover:bg-gray-700 <%= currentPath === '/stats' ? 'bg-gray-700' : '' %>">
+         Stats
+      </a>
     </nav>
   </div>
 
